--- a/index.html
+++ b/index.html
@@ -18,16 +18,21 @@
   </style>
 </head>
 <body>
-  <div class="card">
+  <main>
+    <div class="card">
     <div class="image-container">
       <img src="./images/image-qr-code.png" alt="qr code">
     </div>
     <p class="title">Improve your front-end skills by building projects</p>
     <p class="description">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
   </div>
-  <div class="attribution">
+  </main>
+  <footer>
+    <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://mizunen.github.io/Personal-Website/">Brandon Rodriguez</a>.
   </div>
+  </footer>
+  
 </body>
 </html>
